--- a/styles.css
+++ b/styles.css
@@ -87,12 +87,21 @@ ul {
 }
 .Trusted_by {
     background-color: #F8F8F8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     padding: 15px 0 15px 0;
     height: 130px;
 }
+
+.row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    padding: 0 2em;
+}
+
 .Trusted_by p {
     color:#575757;
     font-weight:500;
@@ -101,8 +110,8 @@ ul {
     margin-left: 100px;
 }
 .Features    {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     text-align: center;
     margin-top: 64px;
 }
@@ -134,10 +143,12 @@ ul {
 .Feature_wrapper p {
     width:328px;
     line-height:31.31px;
+    color: #797979;
 }
 .Feature_wrapper .Learn_more  {
     margin-top: 20px;
 }
+
 .Learn_more a{
     color:#FF7008;
 }
@@ -213,4 +224,75 @@ footer p{
     width:33px;
     height:33px;
     margin-left: 32px
+}
+
+@media screen and (max-width: 900px ) {
+    .Feature_wrapper {
+        flex-direction: column;
+    }
+
+    .__desktop{
+        display: none;
+    }
+
+    .__mobile {
+        display: block;
+        padding: 4em;
+        text-align: center;
+    }
+
+    .Hero{
+        margin-top: 0;
+    }
+
+    .dotty_picture {
+        display: none;
+    }
+
+   
+
+    .col{
+        text-align: center;
+        margin: auto;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        padding: 1em 0;
+        width: 70%;
+    }
+
+  
+
+    .col p{
+        width: 100%;
+        text-align: center;
+    }
+
+    .Trusted_by{
+        height: auto;
+        padding: 2em 0;
+        text-align: center;
+    }
+
+    .Trusted_by p {
+        color: #575757;
+    }
+
+    .Trusted_by div{
+        margin-left: 0px;
+    }
+
+    .row{
+        flex-wrap: wrap;
+    }
+
+    .col-md-4{
+        width: 30%;
+        margin: 2em auto;
+    }
+
+    .company_logo{
+        width: 80%;
+        margin: auto;
+    }
+
 }
