--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,11 @@ ul {
     width:490px;
     height:370px;
 }
+@media screen and (min-width: 900px ) {
+.__mobile   {
+    display: none!important;
+}
+}
 .Hero h1 {
     font-size:45px;
     font-weight: 700;
@@ -159,9 +164,7 @@ ul {
     margin-top: 20px;
 }
 
-.Learn_more a{
-    color:#FF7008;
-}
+
 .footer_content {
     display: flex;
     justify-content: space-around;
@@ -186,7 +189,10 @@ ul {
     line-height: 31.31px;
     color:#797979;
     font-weight: 400!important; 
-    width: 302px;
+    width: 307px;
+}
+.newsletter a {
+    text-decoration:none;
 }
 .Box    {
     margin-top:46px;
@@ -255,7 +261,7 @@ footer p{
 
     .__mobile {
         display: block;
-        padding: 4em;
+        padding: 2em;
         text-align: center;
     }
 
@@ -267,7 +273,10 @@ footer p{
         display: none;
     }
 
-   
+    .Hero_wrapper {
+        width: 100%;
+    height: 100%;
+    } 
 
     .col{
         text-align: center;
@@ -312,5 +321,44 @@ footer p{
         width: 80%;
         margin: auto;
     }
-
+    .footer_content {
+        flex-direction: column;
+        padding-left: 25px;
+    }
+    .footer_options {
+        margin-top: 60px;
+    }
+    .Box {
+        margin-top: 25px;
+    }
+    .Box input {
+        width: 186px;
+    }
+    .Box button {
+        width: 100px;
+    }
+    footer  {
+        padding: 0 20px 0 20px;
+    }
+    .Hero h1 {
+        font-size: 26px;
+        line-height: 38.39px;
+    }
+    .Hero p {
+        line-height: 31.31px;
+        margin-bottom: 40px;
+    }
+    .nav_bar{
+        overflow: hidden;
+        background-color: #F8F8F8;
+        position: relative;
+        padding:30px
+    }
+    .nav_bar .nav_links {
+        display: none;
+    }
+    .main_section    {
+        padding: 0;
+        background-image: url(./images/7014(1).jpg);
+    }
 }
