--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,12 @@ footer p{
     color: #797979;
     font-size:14px;
 }
+.icon   {
+    display: none;
+}
+.icons2 {
+    display: none;
+}
 .icons img{
     width:33px;
     height:33px;
@@ -264,12 +270,17 @@ footer p{
         padding: 2em;
         text-align: center;
     }
+    .dotty_picture {
+    position: absolute;
+    right: -4px;
+    bottom: -921px;
+    }
 
     .Hero{
         margin-top: 0;
     }
 
-    .dotty_picture {
+    .desktop_dotty {
         display: none;
     }
 
@@ -286,8 +297,31 @@ footer p{
         padding: 1em 0;
         width: 70%;
     }
-
-  
+    footer p    {
+        padding: 20px 20px 35px 0;
+    }
+  .icons    {
+      display:none;
+  }
+  .icons2   {
+      padding-bottom: 30px;
+      border-bottom: solid;
+      border-width: 1px;
+      border-color:#E1E1E1;
+  }
+  .icons2   img {
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+}
+  .footer{
+      flex-direction: column;
+      border-top: none;
+      padding-top: 70px ;
+  }
+  footer    {
+      text-align:left;
+  }
 
     .col p{
         width: 100%;
@@ -323,7 +357,7 @@ footer p{
     }
     .footer_content {
         flex-direction: column;
-        padding-left: 25px;
+        padding-left: 20px;
     }
     .footer_options {
         margin-top: 60px;
@@ -348,17 +382,68 @@ footer p{
         line-height: 31.31px;
         margin-bottom: 40px;
     }
+    /* Mobile Navigation bar */
+
     .nav_bar{
         overflow: hidden;
-        background-color: #F8F8F8;
         position: relative;
-        padding:30px
+        display: block;
+        padding-bottom: 0;
+        border:none;  
     }
-    .nav_bar .nav_links {
+    .nav_bar #links {
         display: none;
+        text-align: center;
+        background-color: #F8F8F8;
+        padding-left: 0px;
+        padding-bottom: 50px;
+    }
+    .nav_link    {
+        margin-right: 0 !important;
+        padding-top: 30px;
+    }
+    #link a {
+        border-bottom: none;
+        color:#FF7008;
+    }
+    .nav_logo {
+        padding: 30px;
     }
     .main_section    {
-        padding: 0;
-        background-image: url(./images/7014(1).jpg);
+        /* padding:30px; */
+        background-image: url(images/mobileLady.jpg);
+        background-size: cover;
+        padding:0;
     }
+    .Features h2    {
+        font-size:22px;
+    }
+    .nav_bar  a  {
+        color:black;
+        padding: 14px 10px;
+        text-decoration: none;
+        font-size: 22px;
+        display: block;
+    }
+    .Design {
+        margin-top: 20px;
+    }
+    .Feature_wrapper h3 {
+        margin-bottom: 8px;
+    }
+    .Feature_wrapper .Learn_more {
+        margin-top: 0px;
+    }
+    .nav_bar a.icon {
+        display: block;
+        position: absolute;
+        right: 25px;
+        top: 30px;
+      }
+      .border_bottom    {
+          border-bottom:solid;
+          border-width: 1px;
+          border-color: #9F9F9F54;
+          padding-bottom: 20px;
+      }
 }
